# quiz-app-sockets

./: CMakeLists.txt  README.md  conf.h  mywidget.cpp  mywidget.h  mywidget.ui  server.cpp
